--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,30 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "tailwindcss-animate";
+
+@theme {
+  --color-vscode-light-blue: #9cdcfe;
+  --color-vscode-purple: #c586c0;
+  --color-vscode-blue: #4fc1ff;
+  --color-vscode-yellow: #ffd700;
+  --color-vscode-light-yellow: #dcdcaa;
+  --color-vscode-tan: #ce9178;
+  --color-vscode-green: #6a9955;
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
